tests/baselines/reference/typeGuardAccordingToPropertyOptional.errors.txt
tests/cases/conformance/expressions/typeGuards/typeGuardAccordingToPropertyOptional.ts(28,9): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/expressions/typeGuards/typeGuardAccordingToPropertyOptional.ts(31,11): error TS2339: Property 'key1' does not exist on type 'never'.
tests/cases/conformance/expressions/typeGuards/typeGuardAccordingToPropertyOptional.ts(37,9): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/expressions/typeGuards/typeGuardAccordingToPropertyOptional.ts(44,9): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/expressions/typeGuards/typeGuardAccordingToPropertyOptional.ts(53,9): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/expressions/typeGuards/typeGuardAccordingToPropertyOptional.ts(62,9): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/expressions/typeGuards/typeGuardAccordingToPropertyOptional.ts(68,9): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/expressions/typeGuards/typeGuardAccordingToPropertyOptional.ts(78,9): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/expressions/typeGuards/typeGuardAccordingToPropertyOptional.ts(78,9): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/expressions/typeGuards/typeGuardAccordingToPropertyOptional.ts(81,11): error TS2339: Property 'key1' does not exist on type 'never'.
tests/cases/conformance/expressions/typeGuards/typeGuardAccordingToPropertyOptional.ts(87,9): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/expressions/typeGuards/typeGuardAccordingToPropertyOptional.ts(87,9): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/expressions/typeGuards/typeGuardAccordingToPropertyOptional.ts(94,9): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/expressions/typeGuards/typeGuardAccordingToPropertyOptional.ts(94,9): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/expressions/typeGuards/typeGuardAccordingToPropertyOptional.ts(103,9): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/expressions/typeGuards/typeGuardAccordingToPropertyOptional.ts(103,9): error TS2532: Object is possibly 'undefined'.


==== tests/cases/conformance/expressions/typeGuards/typeGuardAccordingToPropertyOptional.ts (16 errors) ====
    interface Foo1 {
        key1: {
            key2: number;
        } | undefined;
        f1: number;
    }
    
    interface Foo2 {
        key1: {
            key2: string
        } | undefined;
        f2: number;
    }
    
    interface Foo3 {
        key1: {
            key2: number;
        };
        f2: number;
    }
    
    type U1 = Foo1 | Foo2 | Foo3;
    type U2 = Foo1 | Foo2 | Foo3 | undefined;
    
    // unnecessary optional chain
    function f1(u: U1) {
        if (typeof u?.key1 !== 'number') {
            u.key1.key2;
            ~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
        }
        if (typeof u?.key1 === 'number') {
            u.key1.key2;
              ~~~~
!!! error TS2339: Property 'key1' does not exist on type 'never'.
        }
        if (typeof u?.key1 !== 'undefined') {
            u.key1.key2;
        }
        if (typeof u?.key1 === 'undefined') {
            u.key1.key2;
            ~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
        }
    }
    
    // non-root optional chain
    function f2(u: U1) {
        if (typeof u.key1?.key2 !== 'number') {
            u.key1.key2;
            ~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
        }
        if (typeof u.key1?.key2 === 'number') {
            u.key1.key2;
        }
        if (typeof u.key1?.key2 !== 'undefined') {
            u.key1.key2;
        }
        if (typeof u.key1?.key2 === 'undefined') {
            u.key1.key2;
            ~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
        }
    }
    
    function f2Plus(u: U1) {
        if (typeof u.key1?.key2 === 'undefined' && typeof u.key1?.key2 === 'number') {
            u.key1.key2;
        }
        if (typeof u.key1?.key2 === 'undefined' || typeof u.key1?.key2 === 'number') {
            u.key1.key2;    // Error
            ~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
        }
        if (typeof u.key1?.key2 === 'number' && typeof u.key1?.key2 === 'undefined') {
            u.key1.key2;
        }
        if (typeof u.key1?.key2 === 'number' || typeof u.key1?.key2 === 'undefined') {
            u.key1.key2;    // Error
            ~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
        }
        if (typeof u.key1?.key2 === 'number' || typeof u.key1?.key2 !== 'undefined') {
            u.key1.key2;
        }
    }
    
    // root optional chain
    function f3(u: U2) {
        if (typeof u?.key1 !== 'number') {
            u.key1.key2;
            ~
!!! error TS2532: Object is possibly 'undefined'.
            ~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
        }
        if (typeof u?.key1 === 'number') {
            u.key1.key2;
              ~~~~
!!! error TS2339: Property 'key1' does not exist on type 'never'.
        }
        if (typeof u?.key1 !== 'undefined') {
            u.key1.key2;
        }
        if (typeof u?.key1 === 'undefined') {
            u.key1.key2;
            ~
!!! error TS2532: Object is possibly 'undefined'.
            ~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
        }
    }
    
    // multi optional chain
    function f4(u: U2) {
        if (typeof u?.key1?.key2 !== 'number') {
            u.key1.key2;
            ~
!!! error TS2532: Object is possibly 'undefined'.
            ~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
        }
        if (typeof u?.key1?.key2 === 'number') {
            u.key1.key2;
        }
        if (typeof u?.key1?.key2 !== 'undefined') {
            u.key1.key2;
        }
        if (typeof u?.key1?.key2 === 'undefined') {
            u.key1.key2;
            ~
!!! error TS2532: Object is possibly 'undefined'.
            ~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
        }
    }
    